--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
-    "autoprefixer": "^10.4.23",
     "next": "^14.2.35",
-    "postcss": "^8.5.6",
     "prisma": "^7.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.18"
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
