添加 Prisma Client 多平台二进制文件支持 Vercel 部署

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ dist-ssr
 # Prisma
 prisma/*.db
 prisma/*.db-journal
+# Include Prisma Client binaries for Vercel
+!src/generated/prisma/libquery_engine-*.so.node
 
 # Audio files
 public/audio/*.mp3
